
5.2a4 -> 5.2b1:
    - jbj: remove (unused) --hdrfastdatalength and --hdrlazytagswab.
    - jbj: use PROT_READ for header blob's.
    - jbj: add --rpmmidebug.
    - jbj: bump sonames to libfoo-5.2.
    - jbj: rpmmi: rename the other methods for the match iterator object.
    - jbj: rpmmi: rename the typedef and rpmmi{Init,Next,Free} methods.
    - jbj: rpmmi: split out a pool destructor (prior to using).
    - jbj: inline rpmlog() to avoid arglist overhead when -O2 is used.
    - proyvind: make it possible to set macro files to load predefines from by
	defining PREMACROFILES at build time.
    - proyvind: rpmhash: add htGetKeys() for retrieving the keys of the hash table.
    - proyvind: rpmsyck: clean up, use rpmioPool and add destructor.
    - proyvind: remove %distepoch from %provideversion as it will break
	compatibility with rpm <= 4.5.
    - proyvind: rpm4compat: add a wrapper function for headerFormat().
    - jbj: mire: handle items from _mirePool like all other pools.
    - jbj: rpmds: dereference/flush global items earlier, before pool teardown.
    - jbj: rpmds: use _rpmdsPool, not heap, for rpmdsThis/rpmdsSingle as well.
    - jbj: rpmds: fix: rpmdsThis/rpmdsSingle assume ds->i = 0
	(i.e. actively iterating).
    - bero: adjust find-debuginfo.sh to new location of debugedit
    - jbj: don't reset to -O0 with --enable-build-debug and GCC.
    - jbj: grep: fix: don't segfault if no usage mutex or pool attached.
    - rse: align semantics of Lua function rpm.hostname() with the C API function buildHost()
    - proyvind: cpuinfo: move out cpuinfo feature dependencies to YAML.
    - proyvind: rpmsyck: first shot at YAML parser in pure C.
    - proyvind: get rid of parallel %___NVRDA macro, just merge it with %___NVRA in stead.
    - jbj: add RPMSENSE_RPMLIB to new tracking dependencies. at least its
	consistent even if useless.
    - jbj: fix: rpmdsMerge() shouldn't leave a result that seems to have