@@ -1,5 +1,6 @@
 
 5.2a4 -> 5.2b1:
+    - jbj: eliminate (unused) DB_DBT_MALLOC flag while loading rpmdb headers.
     - jbj: remove (unused) --hdrfastdatalength and --hdrlazytagswab.
     - jbj: use PROT_READ for header blob's.
     - jbj: add --rpmmidebug.
